# Sound-Processor

./: CMakeLists.txt  Converter.cpp  Factory.cpp  Printer.cpp  Printer.h  ProgramContext.cpp  ProgramContext.h  README.md  Reader.cpp  Reader.h  SoundProcessor.cpp  SoundProcessor.h  WaveHeadParser.cpp  WaveHeadParser.h  main.cpp
